# anybuf

./: Cargo.toml  README.md  tests.proto
.github/workflows/: test.yml
src/: anybuf.rs  bufany.rs  lib.rs  slice_reader.rs  varint.rs
