[package]
name = "anybuf"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A minimal, zero dependency proto3 encoder to encode anything."
keywords = ["protobuf3", "protobuf", "proto3", "proto", "encoding"]
categories = ["encoding"]
repository = "https://github.com/noislabs/anybuf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
hex-literal = "0.4.1"
