[package]
name = "anybuf"
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
description = "A minimal, zero dependency proto3 encoder to encode/decode anything. No schemas needed."
keywords = ["protobuf3", "protobuf", "proto3", "proto", "encoding"]
categories = ["encoding"]
repository = "https://github.com/webmaster128/anybuf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
hex-literal = "0.4.1"
